--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +27,10 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import rasterio\n",
+    "import rasterio.plot\n",
     "from rasterio import features\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, plot_confusion_matrix\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
      "output_type": "stream",
      "text": [
       "Shape of features : (570, 986)\n",
-      "Number of features : 24\n"
+      "Number of features : 12\n"
      ]
     }
    ],
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -485,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.47\n"
+      "Random Forest training : 00:00:10.84\n"
      ]
     }
    ],
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -546,25 +547,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0803\n",
-      "Band 2 importance: 0.025\n",
-      "Band 3 importance: 0.1008\n",
-      "Band 4 importance: 0.0873\n",
-      "Band 5 importance: 0.1235\n",
-      "Band 6 importance: 0.0477\n",
-      "Band 7 importance: 0.1305\n",
-      "Band 8 importance: 0.1192\n",
-      "Band 9 importance: 0.0925\n",
-      "Band 10 importance: 0.0678\n",
-      "Band 11 importance: 0.0672\n",
-      "Band 12 importance: 0.0581\n"
+      "Band 1 importance: 0.078\n",
+      "Band 2 importance: 0.0301\n",
+      "Band 3 importance: 0.0978\n",
+      "Band 4 importance: 0.0856\n",
+      "Band 5 importance: 0.1134\n",
+      "Band 6 importance: 0.0498\n",
+      "Band 7 importance: 0.1306\n",
+      "Band 8 importance: 0.1239\n",
+      "Band 9 importance: 0.098\n",
+      "Band 10 importance: 0.0724\n",
+      "Band 11 importance: 0.0635\n",
+      "Band 12 importance: 0.057\n"
      ]
     }
    ],
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1200,10 +1201,10 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:12.29\n",
+      "Random Forest training : 00:00:13.74\n",
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3    3 ...    3   22 1121]\n",
+      " [   3   21    3 ...    3    3   22]\n",
+      " [   3    3   21 ...    3    3 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1250,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1402,15 +1403,15 @@
      "output_type": "stream",
      "text": [
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3    3 ...    3   22 1121]\n",
+      " [   3   21    3 ...    3    3   22]\n",
+      " [   3    3   21 ...    3    3 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]]\n",
       "[[  3   3   8 ...   3   3   3]\n",
-      " [  3   3   3 ...   3   3  22]\n",
-      " [  3   3   3 ...   3  22 112]\n",
+      " [  3  21   3 ...   3   3  22]\n",
+      " [  3   3  21 ...   3   3 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1451,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
