--- a/notebooks/C_Color_Map/color_map.ipynb
+++ b/notebooks/C_Color_Map/color_map.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -121,9 +121,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>112</td>\n",
-       "      <td>254</td>\n",
-       "      <td>182</td>\n",
-       "      <td>36</td>\n",
+       "      <td>230</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
        "      <td>255</td>\n",
        "      <td>Maize</td>\n",
        "    </tr>\n",
@@ -175,9 +175,9 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>118</td>\n",
-       "      <td>253</td>\n",
-       "      <td>81</td>\n",
-       "      <td>6</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>153</td>\n",
        "      <td>255</td>\n",
        "      <td>Millets</td>\n",
        "    </tr>\n",
@@ -188,68 +188,68 @@
        "      <td>204</td>\n",
        "      <td>178</td>\n",
        "      <td>255</td>\n",
-       "      <td>Quinoa</td>\n",
+       "      <td>Other cereals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>121</td>\n",
+       "      <td>133</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>123</td>\n",
        "      <td>255</td>\n",
        "      <td>Leafy or stem vegetables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>122</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>247</td>\n",
+       "      <td>71</td>\n",
+       "      <td>119</td>\n",
        "      <td>255</td>\n",
        "      <td>Fruit-bearing vegetables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>123</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>149</td>\n",
+       "      <td>84</td>\n",
+       "      <td>97</td>\n",
        "      <td>255</td>\n",
        "      <td>Root, bulb or tuberous vegetables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>124</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>216</td>\n",
+       "      <td>248</td>\n",
+       "      <td>255</td>\n",
        "      <td>255</td>\n",
        "      <td>Mushrooms and truffles</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>141</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>253</td>\n",
+       "      <td>254</td>\n",
+       "      <td>199</td>\n",
        "      <td>255</td>\n",
        "      <td>Soya beans</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>142</td>\n",
-       "      <td>4</td>\n",
-       "      <td>255</td>\n",
-       "      <td>3</td>\n",
+       "      <td>215</td>\n",
+       "      <td>158</td>\n",
+       "      <td>158</td>\n",
        "      <td>255</td>\n",
        "      <td>Groundnuts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>143</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>120</td>\n",
+       "      <td>101</td>\n",
+       "      <td>146</td>\n",
        "      <td>255</td>\n",
        "      <td>Other oilseed crops</td>\n",
        "    </tr>\n",
@@ -274,18 +274,18 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>153</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
+       "      <td>108</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
        "      <td>255</td>\n",
        "      <td>Cassava</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>154</td>\n",
+       "      <td>244</td>\n",
        "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
+       "      <td>183</td>\n",
        "      <td>255</td>\n",
        "      <td>Yams</td>\n",
        "    </tr>\n",
@@ -346,9 +346,9 @@
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>192</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
        "      <td>255</td>\n",
        "      <td>Fibre crops</td>\n",
        "    </tr>\n",
@@ -418,18 +418,18 @@
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>291</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
        "      <td>255</td>\n",
        "      <td>Succulent plant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>5</td>\n",
-       "      <td>195</td>\n",
-       "      <td>205</td>\n",
-       "      <td>205</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
        "      <td>255</td>\n",
        "      <td>Shrub land</td>\n",
        "    </tr>\n",
@@ -476,32 +476,32 @@
       "text/plain": [
        "    grp_A_nb    R    G    B    T  \\\n",
        "0        111  229  141  140  255   \n",
-       "1        112  254  182   36  255   \n",
+       "1        112  230  152    0  255   \n",
        "2        113  254  254    0  255   \n",
        "3        114  252  139    7  255   \n",
        "4        115  108  158  217  255   \n",
        "5        116  183  148   64  255   \n",
        "6        117   95  196  204  255   \n",
-       "7        118  253   81    6  255   \n",
+       "7        118  255  255  153  255   \n",
        "8        119  104  204  178  255   \n",
-       "9        121    1    1    1  255   \n",
-       "10       122    2    2    2  255   \n",
-       "11       123    3    3    3  255   \n",
-       "12       124    4    4    4  255   \n",
-       "13       141    5    5    5  255   \n",
-       "14       142    4  255    3  255   \n",
-       "15       143    6    6    6  255   \n",
+       "9        121  133    1  123  255   \n",
+       "10       122  247   71  119  255   \n",
+       "11       123  149   84   97  255   \n",
+       "12       124  216  248  255  255   \n",
+       "13       141  253  254  199  255   \n",
+       "14       142  215  158  158  255   \n",
+       "15       143  120  101  146  255   \n",
        "16       151  107   68   11  255   \n",
        "17       152   35  240  155  255   \n",
-       "18       153    7    7    7  255   \n",
-       "19       154    8    8    8  255   \n",
+       "18       153  108   79   79  255   \n",
+       "19       154  244    8  183  255   \n",
        "20       161  234  110   58  255   \n",
        "21       162  239  200  195  255   \n",
        "22        17  130  196  248  255   \n",
        "23       181  151  113  209  255   \n",
        "24       182    8  112    3  255   \n",
        "25         3  137  188   31  255   \n",
-       "26       192    9    9    9  255   \n",
+       "26       192  102    0   51  255   \n",
        "27      1931  255  190  255  255   \n",
        "28      1941  255  253   56  255   \n",
        "29      1991  172  103   42  255   \n",
@@ -509,8 +509,8 @@
        "31        22  212  202  254  255   \n",
        "32        23   10  111   77  255   \n",
        "33        24   19  166   22  255   \n",
-       "34       291   10   10   10  255   \n",
-       "35         5  195  205  205  255   \n",
+       "34       291   51  255  255  255   \n",
+       "35         5  102  102    0  255   \n",
        "36         6   14  119   16  255   \n",
        "37         7  180  180  180  255   \n",
        "38         8  244   12   26  255   \n",
@@ -525,7 +525,7 @@
        "5                                                Rye  \n",
        "6                                               Oats  \n",
        "7                                            Millets  \n",
-       "8                                             Quinoa  \n",
+       "8                                      Other cereals  \n",
        "9                           Leafy or stem vegetables  \n",
        "10                          Fruit-bearing vegetables  \n",
        "11                 Root, bulb or tuberous vegetables  \n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
