--- a/notebooks/4_Sentinel_2_preprocessing/sentinel_2_prepro.ipynb
+++ b/notebooks/4_Sentinel_2_preprocessing/sentinel_2_prepro.ipynb
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Clip images"
+    "### 2.2 Crop images"
    ]
   },
   {
