--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -30,7 +30,6 @@
     "import rasterio.plot\n",
     "from rasterio import features\n",
     "\n",
-    "\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, plot_confusion_matrix\n",
@@ -136,8 +135,8 @@
     "\n",
     "s1_montlhy_mean_tif = f'{s1_path}monthly_mean_{site}_{year}.tif'\n",
     "\n",
-    "classif_tif   = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}.tif'\n",
-    "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_reclassif_name}.tif'\n",
+    "classif_tif   = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}.tif'\n",
+    "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}.tif'\n",
     "\n",
     "\n",
     "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
@@ -493,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.84\n"
+      "Random Forest training : 00:00:10.95\n"
      ]
     }
    ],
@@ -530,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.24%\n"
+      "Our OOB prediction of accuracy is: 99.32%\n"
      ]
     }
    ],
@@ -554,18 +553,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.078\n",
-      "Band 2 importance: 0.0301\n",
-      "Band 3 importance: 0.0978\n",
-      "Band 4 importance: 0.0856\n",
-      "Band 5 importance: 0.1134\n",
-      "Band 6 importance: 0.0498\n",
-      "Band 7 importance: 0.1306\n",
-      "Band 8 importance: 0.1239\n",
-      "Band 9 importance: 0.098\n",
-      "Band 10 importance: 0.0724\n",
-      "Band 11 importance: 0.0635\n",
-      "Band 12 importance: 0.057\n"
+      "Band 1 importance: 0.0727\n",
+      "Band 2 importance: 0.0272\n",
+      "Band 3 importance: 0.0995\n",
+      "Band 4 importance: 0.0881\n",
+      "Band 5 importance: 0.1136\n",
+      "Band 6 importance: 0.0494\n",
+      "Band 7 importance: 0.1335\n",
+      "Band 8 importance: 0.1241\n",
+      "Band 9 importance: 0.095\n",
+      "Band 10 importance: 0.0733\n",
+      "Band 11 importance: 0.0641\n",
+      "Band 12 importance: 0.0594\n"
      ]
     }
    ],
@@ -1073,7 +1072,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>16</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1087,7 +1086,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>137</td>\n",
+       "      <td>136</td>\n",
        "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1096,7 +1095,7 @@
        "      <td>1551</td>\n",
        "      <td>124</td>\n",
        "      <td>2296</td>\n",
-       "      <td>1353</td>\n",
+       "      <td>1354</td>\n",
        "      <td>183</td>\n",
        "      <td>566</td>\n",
        "      <td>7403</td>\n",
@@ -1110,7 +1109,7 @@
        "      <td>1850</td>\n",
        "      <td>403</td>\n",
        "      <td>2059</td>\n",
-       "      <td>137</td>\n",
+       "      <td>136</td>\n",
        "      <td>34909</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1138,8 +1137,8 @@
        "1811        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1911        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1923        0     0    0     0     0    0    0     0     0     0     0     0   \n",
-       "9212        0     0    0     0    15    0    0     0     0     0     0     0   \n",
-       "All      5971  1551  124  2296  1353  183  566  7403  2132  1663   534  1477   \n",
+       "9212        0     0    0     0    16    0    0     0     0     0     0     0   \n",
+       "All      5971  1551  124  2296  1354  183  566  7403  2132  1663   534  1477   \n",
        "\n",
        "predict  1435  1511  1771  1811  1911  1923  9212    All  \n",
        "truth                                                     \n",
@@ -1161,8 +1160,8 @@
        "1811        0     0     0  1850     0     0     0   1850  \n",
        "1911        0     0     0     0   403     0     0    403  \n",
        "1923        0     0     0     0     0  2059     0   2059  \n",
-       "9212        0     0     0     0     0     0   137    152  \n",
-       "All      1176  1577  2454  1850   403  2059   137  34909  "
+       "9212        0     0     0     0     0     0   136    152  \n",
+       "All      1176  1577  2454  1850   403  2059   136  34909  "
       ]
      },
      "metadata": {},
@@ -1201,10 +1200,10 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:13.74\n",
+      "Random Forest training : 00:00:14.27\n",
       "[[   3    3   81 ...    3    3    3]\n",
       " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3    3 1121]\n",
+      " [   3    3   21 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1404,14 +1403,14 @@
      "text": [
       "[[   3    3   81 ...    3    3    3]\n",
       " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3    3 1121]\n",
+      " [   3    3   21 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]]\n",
       "[[  3   3   8 ...   3   3   3]\n",
       " [  3  21   3 ...   3   3  22]\n",
-      " [  3   3  21 ...   3   3 112]\n",
+      " [  3   3  21 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1452,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
