--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,9 @@
     "\n",
     "no_data = 0\n",
     "trees_nb = 50\n",
+    "\n",
+    "# Window size (filtering)\n",
+    "ws = 3\n",
     "\n",
     "field_classif_code = 'grp_1_nb'\n",
     "field_classif_name = 'grp_1'\n",
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +140,7 @@
     "\n",
     "classif_tif   = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}.tif'\n",
     "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}.tif'\n",
-    "\n",
+    "reclassif_filter_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}_filter_ws_{ws}.tif'\n",
     "\n",
     "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
    ]
@@ -492,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.95\n"
+      "Random Forest training : 00:00:10.44\n"
      ]
     }
    ],
@@ -529,7 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.32%\n"
+      "Our OOB prediction of accuracy is: 99.29%\n"
      ]
     }
    ],
@@ -553,18 +556,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0727\n",
-      "Band 2 importance: 0.0272\n",
-      "Band 3 importance: 0.0995\n",
-      "Band 4 importance: 0.0881\n",
-      "Band 5 importance: 0.1136\n",
-      "Band 6 importance: 0.0494\n",
-      "Band 7 importance: 0.1335\n",
-      "Band 8 importance: 0.1241\n",
-      "Band 9 importance: 0.095\n",
-      "Band 10 importance: 0.0733\n",
-      "Band 11 importance: 0.0641\n",
-      "Band 12 importance: 0.0594\n"
+      "Band 1 importance: 0.0731\n",
+      "Band 2 importance: 0.0289\n",
+      "Band 3 importance: 0.0877\n",
+      "Band 4 importance: 0.0849\n",
+      "Band 5 importance: 0.1274\n",
+      "Band 6 importance: 0.0511\n",
+      "Band 7 importance: 0.1249\n",
+      "Band 8 importance: 0.132\n",
+      "Band 9 importance: 0.0923\n",
+      "Band 10 importance: 0.0746\n",
+      "Band 11 importance: 0.0612\n",
+      "Band 12 importance: 0.0619\n"
      ]
     }
    ],
@@ -1072,7 +1075,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>15</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1086,7 +1089,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>136</td>\n",
+       "      <td>137</td>\n",
        "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1095,7 +1098,7 @@
        "      <td>1551</td>\n",
        "      <td>124</td>\n",
        "      <td>2296</td>\n",
-       "      <td>1354</td>\n",
+       "      <td>1353</td>\n",
        "      <td>183</td>\n",
        "      <td>566</td>\n",
        "      <td>7403</td>\n",
@@ -1109,7 +1112,7 @@
        "      <td>1850</td>\n",
        "      <td>403</td>\n",
        "      <td>2059</td>\n",
-       "      <td>136</td>\n",
+       "      <td>137</td>\n",
        "      <td>34909</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1137,8 +1140,8 @@
        "1811        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1911        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1923        0     0    0     0     0    0    0     0     0     0     0     0   \n",
-       "9212        0     0    0     0    16    0    0     0     0     0     0     0   \n",
-       "All      5971  1551  124  2296  1354  183  566  7403  2132  1663   534  1477   \n",
+       "9212        0     0    0     0    15    0    0     0     0     0     0     0   \n",
+       "All      5971  1551  124  2296  1353  183  566  7403  2132  1663   534  1477   \n",
        "\n",
        "predict  1435  1511  1771  1811  1911  1923  9212    All  \n",
        "truth                                                     \n",
@@ -1160,8 +1163,8 @@
        "1811        0     0     0  1850     0     0     0   1850  \n",
        "1911        0     0     0     0   403     0     0    403  \n",
        "1923        0     0     0     0     0  2059     0   2059  \n",
-       "9212        0     0     0     0     0     0   136    152  \n",
-       "All      1176  1577  2454  1850   403  2059   136  34909  "
+       "9212        0     0     0     0     0     0   137    152  \n",
+       "All      1176  1577  2454  1850   403  2059   137  34909  "
       ]
      },
      "metadata": {},
@@ -1185,7 +1188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Predicting the rest of the image\n",
+    "## 3. Predict the rest of the image\n",
     "\n",
     "With our Random Forest classifier fit, we can now proceed by trying to classify the entire image."
    ]
@@ -1200,10 +1203,10 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:14.27\n",
+      "Random Forest training : 00:00:12.38\n",
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3    3   22]\n",
+      " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1245,44 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write Classification product into a GeoTIFF file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Size of classification image : (570, 986)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Size of classification image : {class_prediction.shape}')\n",
-    "\n",
-    "# Open template image to get metadata\n",
-    "src = rasterio.open(img_temp_tif)\n",
-    "im = src.read(1)\n",
-    "profile = src.profile\n",
-    "\n",
-    "# Write classification image\n",
-    "dst = rasterio.open(classif_tif, 'w', **profile)\n",
-    "dst.write(class_prediction, 1)\n",
-    "\n",
-    "# Close rasterio objects\n",
-    "src.close()\n",
-    "dst.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Reclassification"
+    "## 4. Reclassify classification"
    ]
   },
   {
@@ -1394,23 +1360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3   22 1121]\n",
+      "Classification : \n",
+      " [[   3    3   81 ...    3    3    3]\n",
+      " [   3    3    3 ...    3    3   22]\n",
+      " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]]\n",
-      "[[  3   3   8 ...   3   3   3]\n",
-      " [  3  21   3 ...   3   3  22]\n",
-      " [  3   3  21 ...   3  22 112]\n",
+      "Re-classification : \n",
+      " [[  3   3   8 ...   3   3   3]\n",
+      " [  3   3   3 ...   3   3  22]\n",
+      " [  3   3   3 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1419,14 +1387,7 @@
     }
    ],
    "source": [
-    "src = rasterio.open(classif_tif)\n",
-    "\n",
-    "profile = src.profile\n",
-    "reclass_prediction = src.read(1)\n",
-    "\n",
-    "src.close()\n",
-    "\n",
-    "print(class_prediction)\n",
+    "reclass_prediction = np.copy(class_prediction)\n",
     "\n",
     "for i, row in lut_df.iterrows():\n",
     "    \n",
@@ -1439,44 +1400,154 @@
     "\n",
     "    reclass_prediction[reclass_prediction == old_class] = new_class\n",
     "\n",
-    "print(reclass_prediction)"
+    "print(f'Classification : \\n {class_prediction}')\n",
+    "print(f'Re-classification : \\n {reclass_prediction}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 Write re-classification product into a GeoTIFF file"
+    "## 5. Filter classification with moving window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of re-classification image : (570, 986)\n"
+      "Re-classification : \n",
+      " [[  3   3   8 ...   3   3   3]\n",
+      " [  3   3   3 ...   3   3  22]\n",
+      " [  3   3   3 ...   3  22 112]\n",
+      " ...\n",
+      " [  6   6   6 ... 111 111 111]\n",
+      " [  6   6   6 ... 111 111 111]\n",
+      " [  6   6   6 ... 111 111 111]]\n",
+      "Re-classification with filter : \n",
+      " [[[  3   3   3 ...   3   3   3]\n",
+      "  [  3   3   3 ...   3   3   3]\n",
+      "  [  3   3   3 ...   3   3 112]\n",
+      "  ...\n",
+      "  [  6   6   6 ... 111 111 111]\n",
+      "  [  6   6   6 ... 111 111 111]\n",
+      "  [  6   6   6 ... 111 111 111]]]\n"
      ]
     }
    ],
    "source": [
-    "print(f'Size of re-classification image : {reclass_prediction.shape}')\n",
+    "sizey = reclass_prediction.shape[0]\n",
+    "sizex = reclass_prediction.shape[1]\n",
     "\n",
-    "# Open template image to get metadata\n",
-    "src = rasterio.open(img_temp_tif)\n",
-    "im = src.read(1)\n",
-    "profile = src.profile\n",
+    "X = np.pad(reclass_prediction, ((1,1),(1,1)), 'edge')\n",
     "\n",
-    "# Write re-classification image\n",
-    "dst = rasterio.open(reclassif_tif, 'w', **profile)\n",
-    "dst.write(reclass_prediction, 1)\n",
+    "majority = np.empty((sizey,sizex), dtype='int16')\n",
     "\n",
-    "# Close rasterio objects\n",
-    "src.close()\n",
-    "dst.close()"
+    "for i in range(sizey):\n",
+    "    for j in range(sizex):\n",
+    "        window = X[i:i+ws,j:j+ws]\n",
+    "        window = window.flatten()\n",
+    "        counts = np.bincount(window)\n",
+    "        maj = np.argmax(counts)\n",
+    "        majority[i,j]= maj\n",
+    "\n",
+    "majority = majority.reshape((1,sizey,sizex))\n",
+    "\n",
+    "print(f'Re-classification : \\n {reclass_prediction}')\n",
+    "print(f'Re-classification with filter : \\n {majority}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Write classification products into GeoTIFF files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open template image to get metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff', 'dtype': 'int16', 'nodata': -10000.0, 'width': 986, 'height': 570, 'count': 1, 'crs': CRS({'init': 'epsg:32631'}), 'transform': Affine(10.0, 0.0, 627260.0,\n",
+       "       0.0, -10.0, 5596180.0), 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with rasterio.open(img_temp_tif) as src:\n",
+    "    profile = src.profile\n",
+    "\n",
+    "profile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 Write classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(classif_tif, \"w\", **profile) as dst:\n",
+    "    dst.write(class_prediction, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.2 Write re-classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(reclassif_tif, \"w\", **profile) as dst:\n",
+    "    dst.write(reclass_prediction, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.3 Write re-classification with moving window filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(reclassif_filter_tif, \"w\", **profile) as dst:\n",
+    "    dst.write(majority)"
    ]
   }
  ],
