--- a/notebooks/1_Region_of_interest/region_of_interest.ipynb
+++ b/notebooks/1_Region_of_interest/region_of_interest.ipynb
@@ -47,6 +47,7 @@
    "outputs": [],
    "source": [
     "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
+    "#computer_path = 'X:/'\n",
     "grp_letter    = 'X'\n",
     "\n",
     "# Directory for all work files\n",
