re arrange folders

--- a/notebooks/1_Region_of_interest/region_of_interest.ipynb
+++ b/notebooks/1_Region_of_interest/region_of_interest.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "Choose the same CRS as the Sentinel data.\n",
     "\n",
-    "WGS 84 / UTM zone 31N"
+    "E.g. : WGS 84 / UTM zone 31N (EPSG:32631) if your ROI is located in Belgium"
    ]
   },
   {
