--- a/notebooks/3_In_situ_data/in_situ_data.ipynb
+++ b/notebooks/3_In_situ_data/in_situ_data.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *In situ* data"
+    "# Vector data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,7 @@
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "from IPython.display import Image\n",
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -942,39 +943,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>167</td>\n",
        "      <td>POLYGON ((636106.223 5595512.196, 636122.069 5...</td>\n",
-       "      <td>3199</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>483</td>\n",
-       "      <td>POLYGON ((629761.504 5593158.472, 629780.378 5...</td>\n",
        "      <td>3199</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1181</td>\n",
-       "      <td>POLYGON ((636735.316 5595728.754, 636750.328 5...</td>\n",
+       "      <td>483</td>\n",
+       "      <td>POLYGON ((629761.504 5593158.472, 629780.378 5...</td>\n",
        "      <td>3199</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1234</td>\n",
-       "      <td>POLYGON ((630113.339 5594270.350, 630101.635 5...</td>\n",
+       "      <td>1181</td>\n",
+       "      <td>POLYGON ((636735.316 5595728.754, 636750.328 5...</td>\n",
        "      <td>3199</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1234</td>\n",
+       "      <td>POLYGON ((630113.339 5594270.350, 630101.635 5...</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>3399</td>\n",
        "      <td>POLYGON ((637115.003 5595823.427, 637115.003 5...</td>\n",
        "      <td>3199</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -982,11 +983,11 @@
       ],
       "text/plain": [
        "   id_ori                                           geometry  sub_nb  id\n",
-       "0     167  POLYGON ((636106.223 5595512.196, 636122.069 5...    3199   0\n",
-       "1     483  POLYGON ((629761.504 5593158.472, 629780.378 5...    3199   1\n",
-       "2    1181  POLYGON ((636735.316 5595728.754, 636750.328 5...    3199   2\n",
-       "3    1234  POLYGON ((630113.339 5594270.350, 630101.635 5...    3199   3\n",
-       "4    3399  POLYGON ((637115.003 5595823.427, 637115.003 5...    3199   4"
+       "1     167  POLYGON ((636106.223 5595512.196, 636122.069 5...    3199   1\n",
+       "2     483  POLYGON ((629761.504 5593158.472, 629780.378 5...    3199   2\n",
+       "3    1181  POLYGON ((636735.316 5595728.754, 636750.328 5...    3199   3\n",
+       "4    1234  POLYGON ((630113.339 5594270.350, 630101.635 5...    3199   4\n",
+       "5    3399  POLYGON ((637115.003 5595823.427, 637115.003 5...    3199   5"
       ]
      },
      "metadata": {},
@@ -1010,6 +1011,8 @@
     "in_situ_gdf = pd.concat(dataset_to_merge, ignore_index=True)\n",
     "\n",
     "# Set a new unique ID\n",
+    "\n",
+    "in_situ_gdf.index +=1\n",
     "in_situ_gdf['id'] = in_situ_gdf.index\n",
     "\n",
     "display(in_situ_gdf.head())\n",
@@ -1025,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1282,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -1296,7 +1299,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -1313,7 +1316,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -1330,7 +1333,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -1347,7 +1350,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -1368,11 +1371,11 @@
       ],
       "text/plain": [
        "   id  lc_nb                     lc  grp_nb                    grp  class_nb  \\\n",
-       "0   0      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "1   1      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "2   2      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "3   3      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "4   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "0   1      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "1   2      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "2   3      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "3   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "4   5      3  Grassland and meadows      31  Grassland and meadows       319   \n",
        "\n",
        "                   class  sub_nb                    sub  grp_1_nb  \\\n",
        "0  Grassland and meadows    3199  Grassland and meadows         3   \n",
@@ -1427,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
