--- a/notebooks/7_Classification/in_situ_sampling_design.ipynb
+++ b/notebooks/7_Classification/in_situ_sampling_design.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -179,7 +179,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -198,7 +198,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -217,7 +217,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -236,7 +236,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -259,11 +259,11 @@
       ],
       "text/plain": [
        "   id  lc_nb                     lc  grp_nb                    grp  class_nb  \\\n",
-       "0   3      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "1   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "2   5      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "3   6      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "4   8      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "0   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "1   5      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "2   6      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "3   7      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "4   9      3  Grassland and meadows      31  Grassland and meadows       319   \n",
        "\n",
        "                   class  sub_nb                    sub  grp_1_nb  \\\n",
        "0  Grassland and meadows    3199  Grassland and meadows         3   \n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -378,7 +378,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -399,7 +399,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -420,7 +420,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -441,7 +441,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
@@ -466,11 +466,11 @@
       ],
       "text/plain": [
        "   id  lc_nb                     lc  grp_nb                    grp  class_nb  \\\n",
-       "0   3      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "1   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "2   5      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "3   6      3  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "4   8      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "0   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "1   5      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "2   6      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "3   7      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "4   9      3  Grassland and meadows      31  Grassland and meadows       319   \n",
        "\n",
        "                   class  sub_nb                    sub  grp_1_nb  \\\n",
        "0  Grassland and meadows    3199  Grassland and meadows         3   \n",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "    <tr>\n",
        "      <th>403</th>\n",
        "      <td>1923</td>\n",
-       "      <td>Flax, hemp and other similar crops</td>\n",
+       "      <td>Flax  hemp and other similar crops</td>\n",
        "      <td>2810</td>\n",
        "      <td>0.026138</td>\n",
        "      <td>2</td>\n",
@@ -718,7 +718,7 @@
        "376      1192                       Other cereals      6117   0.056898   \n",
        "411      1771                                Peas      3606   0.033542   \n",
        "502        69                              Forest      3109   0.028919   \n",
-       "403      1923  Flax, hemp and other similar crops      2810   0.026138   \n",
+       "403      1923  Flax  hemp and other similar crops      2810   0.026138   \n",
        "455        21                        Fruits trees      2239   0.020826   \n",
        "421      1435                            Rapeseed      1826   0.016985   \n",
        "466        81                               Urban      1795   0.016696   \n",
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1923</td>\n",
-       "      <td>Flax, hemp and other similar crops</td>\n",
+       "      <td>Flax  hemp and other similar crops</td>\n",
        "      <td>2059</td>\n",
        "      <td>751</td>\n",
        "      <td>5</td>\n",
@@ -1064,7 +1064,7 @@
        "2       1771                                Peas     2454     1152         8   \n",
        "3         69                              Forest     2296      813        28   \n",
        "4       1121                               Maize     2132     6535        10   \n",
-       "5       1923  Flax, hemp and other similar crops     2059      751         5   \n",
+       "5       1923  Flax  hemp and other similar crops     2059      751         5   \n",
        "6       1811                          Sugar beet     1850     5550         4   \n",
        "7       1152                      Barley six-row     1663     4996         8   \n",
        "8       1511                            Potatoes     1577     4862         4   \n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
